[package]
name = "pallet-dynamic-fee"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Dynamic fee handling for EVM."
license = "Apache-2.0"

[dependencies]
pallet-evm = { path = "../evm", version = "6.0.0-dev", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-core = { version = "4.1.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
async-trait = "0.1"
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/remzrn/substrate", branch = "remz-substrate-upgrade-20211218" }

[features]
default = ["std"]
std = [
	"codec/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-inherents/std",
	"frame-system/std",
	"frame-support/std",
	"pallet-evm/std",
	"scale-info/std",
]
