[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "Primitive EVM abstractions for Substrate."
documentation = "https://docs.rs/sp-evm"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
evm = { git = "https://github.com/rust-blockchain/evm", rev = "8d8d4783c922b96037aa4bf1f186a6b5e0b00c90", default-features = false, features = [ "with-codec" ] }
serde = { version = "1.0.136", features = ["derive"], optional = true }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
sp-core = { version = "6.0.0", git = "https://github.com/remzrn/substrate", default-features = false , branch = "edg_polkadot-v0.9.19" }
sp-std = { version = "4.0.0", git = "https://github.com/remzrn/substrate", default-features = false , branch = "edg_polkadot-v0.9.19" }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"serde",

	"codec/std",
	"sp-core/std",
	"sp-std/std",
]
