[package]
name = "pallet-evm-test-vector-support"
version = "1.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/frontier/"
description = "Test vector support for EVM pallet."

[dependencies]
evm = { git = "https://github.com/rust-blockchain/evm", rev = "8d8d4783c922b96037aa4bf1f186a6b5e0b00c90", features = [ "with-codec" ] }
hex = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"

fp-evm = { version = "3.0.0-dev", path = "../../../primitives/evm" }
